--- a/src/index.css
+++ b/src/index.css
@@ -49,9 +49,8 @@ body {
     overflow-y: scroll;
     list-style: none;
     padding: 0;
-    margin: 0;
+    margin: 2px;
     position: absolute;
-    left: 2%;
     border: 1px solid #ccc;
 }
 
@@ -83,8 +82,8 @@ body {
     gap: 5px;
     background-color: black;
     color: #fff;
-    padding: 5px 10px;
-    border-radius: 16px;
+    padding: 10px 14px;
+    border-radius: 23px;
     cursor: pointer;
 }
 
